--- a/cabal-hoogle.cabal
+++ b/cabal-hoogle.cabal
@@ -57,13 +57,16 @@ executable cabal-hoogle
   main-is:             Main.hs
 
   -- Modules included in this executable, other than Main.
-  -- other-modules:
+  other-modules:       CabalHoogle
+                     , Distribution.Exceptions
+                     , Distribution.HoogleCmd
+                     , System.Typed
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends:       base ^>= 4.9
+  build-depends:       base ^>= 4.11
                      , bytestring
                      , Cabal ^>= 2.4
                      , containers
@@ -76,6 +79,7 @@ executable cabal-hoogle
                      , optparse-applicative
                      , process
                      , reflection
+                     , stm
                      , text
                      , transformers
                      , yet-another-logger
@@ -85,4 +89,4 @@ executable cabal-hoogle
 
   -- Base language which the package is written in.
   default-language:    Haskell2010
-  ghc-options: -Wall -fwarn-tabs
+  -- ghc-options: -Wall -fwarn-tabs
