--- a/cabal-hoogle.cabal
+++ b/cabal-hoogle.cabal
@@ -57,8 +57,7 @@ executable cabal-hoogle
   main-is:             Main.hs
 
   -- Modules included in this executable, other than Main.
-  other-modules:       Distribution.CabalHoogle
-                     , Distribution.CabalHoogle.Exceptions
+  other-modules:       Distribution.CabalHoogle.Exceptions
                      , Distribution.CabalHoogle.HoogleCmd
                      , Distribution.CabalHoogle.HoogleConfig
                      , Distribution.CabalHoogle.HoogleOpts
